# mlab

./: .gitignore  .hpsearch_temp_gin  .pipe_par_test_model_0  .pipe_par_test_model_1  .run_fn_with_config.py.swp  BYO_Interpretability_copy.ipynb  BYO_Resnet_copy.ipynb  Bert_Search.py  CWSC-2022.01.18-W1D2.ipynb  Hyperparameter_Search.ipynb  ImageNet-ValidationSet.zip-16c5dd6a172ac59e0f27d4b698e5399ea9d48160.torrent  OLD_BYO_Resnet.ipynb  TEMP_CONFIG.gin  basic_rl_template.ipynb  bert_eric.py  bert_gin.py  bert_sol_gin.gin  bert_sol_gin.py  demo_train.py  distribute_file.sh  do_search.py  feedback.ipynb  gptj_arch.txt  hpsearch.py  hpsearch_launch.py  hpsearch_nb.py  hpsearch_test.gin  hpsearch_test.ipynb  hpsearch_test.py  imgnt_download.sh  instance_ips  instance_links  lambda-labs-setup.sh  ll_pull.sh  ll_pull_all.sh  ll_pull_hard.sh  ll_remote_setup.sh  ll_setup_all.sh  manual_tests.py  notes.md  (+24 more)
comparisons/: batch0_cnndm.json  batch13.json  batch18.json  cnndm0.json  edit_b2_eval_test.json
days/: BertModel  Untitled.ipynb  atari_utils.py  atari_wrappers.py  base_notebook.ipynb  bert.py  bert_run.py  dataparallel.py  dataparallel_exp2.py  dataparallel_resnet_tao.py  day1_tests.py  dp_resnet.py  dp_simple.py  dqn_max.py  dqn_solution.gin  dqn_solution.py  dqn_solution_acrobot.gin  dqn_solution_beamrider.gin  dqn_solution_breakout.gin  dqn_solution_cartpole.gin  dqn_solution_pong.gin  feature_visualizations.py  gc_resnet.py  gpt2.py  gpt_tests.py  gradient_compression.py  hpsearch.py  modules.py  pipelineparallel.gin  pipelineparallel.py  pipelineparallel_gptj_imdb.gin  pipelineparallel_resnet50_cifar10.gin  pipelineparallel_t5-11b_imdb.gin  pp_naive.gin  pp_nominibatch.py  pycuda_filtering_solutions.cu  pycuda_filtering_solutions.py  pycuda_intro.py  pycuda_intro_solutions.py  pycuda_summing_solutions.cu  (+24 more)
days/ROME/: rome.ipynb
days/alphazero/: alphazero.py
days/cuda_code/: CMakeLists.txt
days/cuda_code/include/: solution_utils.h  utils.h
days/cuda_code/scripts/: solution_plot_ops_filter.py  solution_plot_ops_sum.py
days/cuda_code/src/: filtering_array_solutions.cu  reduce_by_key_solutions.cu  summing_array.cu  summing_array_solutions.cu
days/max/: w1d1_max.ipynb  w1d3_max.ipynb
days/transformer_interpretability/: w2d5_tests.py
days/w1d1/: day1_tests.py  renderer.ipynb  renderer_mine.ipynb  renderer_ours.ipynb  renderer_solutions.ipynb  renderer_template.ipynb  w1d1_renderer_solutions.ipynb  w1d1_sol.py  w1d1_student_template.py  w1d1_tips.md
days/w1d2/: as_strided_example_tests.py  conv1d_example_tests.py  day2(2).ipynb  prelude.py  utils.py  w1d2_mine.ipynb  w1d2_ours.ipynb  w1d2_sol.ipynb  w1d2_template.ipynb  w1d2_tips.md
days/w1d3/: w1d3_template.ipynb
days/w1d4/: .gitignore  arthur_experiment.py  arthurconfig.gin  config.gin  driver.py  eric_guilhermo.ipynb  eric_guilhermo.py  experiment.py  gin_exercise.py  gin_gen.py  good_file.py  gorilla.py  hyperparam_search.py  hypersearch.py  imagenet-fft.ipynb  launcher.py  make_tasks.py  optim.py  optims.py  picture_learning.py  picture_learning2.py  remote_job_requests.py  remote_job_script.py  requirements.txt  result.pt  run_experiment.py  run_jobs.py  run_picture_learning.py  run_things_remotely.py  send_rr_request.py  training.py  w1d4.py  w1d4_mine.ipynb  w1d4_partial_sol.ipynb  w1d4_sol.ipynb  w1d4_sol.py  w1d4_template.ipynb  w1d4_tests.py  w1d4_tests.py~  whatever.py
days/w1d5/: DFT.fdb_latexmk  DFT.fls  DFT.tex  channel_viz.ipynb  color.py  opt_image.py  p_image.py  w1d5.ipynb  w1d5_eric_guilhermo.ipynb  w1d5_eric_guilhermo_v2.ipynb  w1d5_mine.ipynb  w1d5_partial_sol.ipynb  w1d5_sol.ipynb  w1d5_sol.py  w1d5_template.ipynb
days/w1d6/: Makefile  abc.cu  abc.py  abc_soln.cu  abc_soln.py  array_sum.py  benchmark.ipynb  benchmark.py  benchmark_soln.py  cuda_load_from_file_example.cu  filter_atomic.cu  filter_atomic.py  filter_atomic_soln.cu  filter_atomic_soln.py  index.cu  index.py  index_soln.cu  index_soln.py  intro.cu  intro.py  pycuda_filtering_solutions.py  pycuda_intro.py  pycuda_intro_solutions.py  pycuda_summing_solutions.cu  pycuda_summing_solutions.py  pycuda_utils.py  sum_atomic.cu  sum_atomic.py  sum_atomic_soln.cu  sum_atomic_soln.py  sum_rows.cu  sum_rows.py  sum_rows_soln.cu  sum_rows_soln.py  sum_shared.cu  sum_shared.py
days/w2d1/: .bert_run_sol.py.swp  .bert_sol.py.swp  bert.ipynb  bert.py  bert_adria.py  bert_extra_tests.ipynb  bert_run_sol.py  bert_sol.py  bert_tao.py  bert_tests.py  day2(2).ipynb  hfbert.py  utils.py  w2d1.ipynb  w2d2.ipynb
days/w2d3/: gpt.py  (+15 more)
docs/: bert.md  coding_style.md  gpt2.md  modules.md  plan.md
gpu_code_temp/: CMakeLists.txt
gpu_code_temp/include/: solution_utils.h  utils.h
gpu_code_temp/scripts/: plot_times_sum.py  solution_plot_ops_sum.py
gpu_code_temp/src/: cuda_example.cu  exercise_0.cu  exercise_1.cu  filtering_array_solutions.cu  summing_array_solutions.cu
infrastructure/: ll_api.py
minitorch/: README.md
ml_bootcamp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mlab_tests/: __init__.py  bert.py  nn_functional.py  torch_intro.py
rome/: fact_examples.json  rome.ipynb  rome.py
(+359 files in other folders)
